[package]
name = "qq-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qq-bot"
path = "src/main.rs"

[dependencies]
proc_qq = { git = "https://github.com/niuhuan/rust_proc_qq.git", branch = "next" }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1.28"
dns-lookup = "2.0.0"
tokio-test = "*"
json = "0.12.4"
base64 = "0.21.0"