[package]
name = "qq-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qq-bot-qr"
path = "src/qr-main.rs"

[[bin]]
name = "qq-bot-password"
path = "src/password-main.rs"

[dependencies]
proc_qq = { git = "https://github.com/niuhuan/rust_proc_qq.git", branch = "master" }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
dns-lookup = "2.0.0"
tokio-test = "*"
json = "0.12.4"
base64 = "0.21.0"
reqwest = { version = "0.11", features = ["json"] }